--- a/src/cascadia/TerminalSettingsEditor/SettingContainerStyle.xaml
+++ b/src/cascadia/TerminalSettingsEditor/SettingContainerStyle.xaml
@@ -134,6 +134,7 @@
     </Style>
 
     <Style x:Key="SettingContainerResetButtonStyle"
+           BasedOn="{StaticResource DefaultButtonStyle}"
            TargetType="Button">
         <Setter Property="Margin" Value="5,0,0,0" />
         <Setter Property="Height" Value="19" />
