--- a/src/cascadia/TerminalSettingsEditor/Extensions.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Extensions.xaml
@@ -110,19 +110,20 @@
                         <ContentPresenter Content="{x:Bind}"
                                           ContentTemplate="{StaticResource DefaultExtensionIdentifierTemplate}" />
 
-                        <TextBlock x:Uid="Extension_StateDisabled"
-                                   Grid.Column="1"
-                                   HorizontalAlignment="Right"
-                                   VerticalAlignment="Center"
-                                   Style="{StaticResource SecondaryTextBlockStyle}"
-                                   Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(Enabled)}" />
+                        <ToggleSwitch Grid.Column="1"
+                                      HorizontalAlignment="Right"
+                                      VerticalAlignment="Center"
+                                      AutomationProperties.Name="{x:Bind AccessibleName}"
+                                      IsOn="{x:Bind Enabled, Mode=TwoWay}"
+                                      Style="{StaticResource ToggleSwitchInExpanderStyle}" />
+
                     </Grid>
                 </Button>
             </DataTemplate>
 
             <DataTemplate x:Key="ComplexExtensionNavigatorTemplate"
                           x:DataType="local:ExtensionPackageViewModel">
-                <Button AutomationProperties.Name="{x:Bind AccessibleNameWithStatus}"
+                <Button AutomationProperties.Name="{x:Bind AccessibleName}"
                         Click="ExtensionNavigator_Click"
                         Style="{StaticResource NavigatorButtonStyle}"
                         Tag="{x:Bind}">
@@ -135,12 +136,12 @@
                         <ContentPresenter Content="{x:Bind}"
                                           ContentTemplate="{StaticResource ComplexExtensionIdentifierTemplate}" />
 
-                        <TextBlock x:Uid="Extension_StateDisabled"
-                                   Grid.Column="1"
-                                   HorizontalAlignment="Right"
-                                   VerticalAlignment="Center"
-                                   Style="{StaticResource SecondaryTextBlockStyle}"
-                                   Visibility="{x:Bind mtu:Converters.InvertedBooleanToVisibility(Enabled)}" />
+                        <ToggleSwitch Grid.Column="1"
+                                      HorizontalAlignment="Right"
+                                      VerticalAlignment="Center"
+                                      AutomationProperties.Name="{x:Bind AccessibleName}"
+                                      IsOn="{x:Bind Enabled, Mode=TwoWay}"
+                                      Style="{StaticResource ToggleSwitchInExpanderStyle}" />
                     </Grid>
                 </Button>
             </DataTemplate>
@@ -464,7 +465,8 @@
             <ItemsControl x:Name="ModifiedProfilesList"
                           IsTabStop="False"
                           ItemTemplate="{StaticResource FragmentProfileViewModelTemplate}"
-                          ItemsSource="{x:Bind ViewModel.ProfilesModified, Mode=OneWay}" />
+                          ItemsSource="{x:Bind ViewModel.ProfilesModified, Mode=OneWay}"
+                          XYFocusKeyboardNavigation="Enabled" />
         </StackPanel>
 
         <!--  Grouping: Added Profiles  -->
@@ -475,7 +477,8 @@
             <ItemsControl x:Name="AddedProfilesList"
                           IsTabStop="False"
                           ItemTemplate="{StaticResource FragmentProfileViewModelTemplate}"
-                          ItemsSource="{x:Bind ViewModel.ProfilesAdded, Mode=OneWay}" />
+                          ItemsSource="{x:Bind ViewModel.ProfilesAdded, Mode=OneWay}"
+                          XYFocusKeyboardNavigation="Enabled" />
         </StackPanel>
 
         <!--  Grouping: Added Color Schemes  -->
@@ -486,7 +489,8 @@
             <ItemsControl x:Name="AddedColorSchemesList"
                           IsTabStop="False"
                           ItemTemplate="{StaticResource FragmentColorSchemeViewModelTemplate}"
-                          ItemsSource="{x:Bind ViewModel.ColorSchemesAdded, Mode=OneWay}" />
+                          ItemsSource="{x:Bind ViewModel.ColorSchemesAdded, Mode=OneWay}"
+                          XYFocusKeyboardNavigation="Enabled" />
         </StackPanel>
     </StackPanel>
 </Page>
