Updated pane context menu (#18126)
## Motivation 
The motivation is that Windows users are more accustomed to working with
GUI Menus using a mouse, unlike Linux users.

## Summary of the Pull Request
added split pane with profile or duplicate up/down/left/right context
menus as submenu
added swap panes up/down/left/right context menus as submenu
added toggle pane zoom context menu
added close other panes context menu

## References :
- Relevant Issues : (#18137)

## Type of change :
- [x] New feature

---------

Co-authored-by: Mike Griese <migrie@microsoft.com>

--- a/src/cascadia/TerminalControl/TermControl.xaml
+++ b/src/cascadia/TerminalControl/TermControl.xaml
@@ -52,6 +52,10 @@
                               x:Uid="SelectOutputButton"
                               Click="_SelectOutputHandler"
                               Icon="AlignLeft" />
+                <AppBarButton x:Name="SearchCommandButton"
+                              x:Uid="SearchCommandButton"
+                              Click="_SearchCommandHandler"
+                              Icon="Find" />
             </mux:CommandBarFlyout.SecondaryCommands>
         </mux:CommandBarFlyout>
 
@@ -65,10 +69,6 @@
                           Click="_PasteCommandHandler"
                           Icon="Paste" />
             <mux:CommandBarFlyout.SecondaryCommands>
-                <AppBarButton x:Name="SearchCommandButton"
-                              x:Uid="SearchCommandButton"
-                              Click="_SearchCommandHandler"
-                              Icon="Find" />
                 <AppBarButton x:Name="SelectCommandWithSelectionButton"
                               x:Uid="SelectCommandWithSelectionButton"
                               Click="_SelectCommandHandler">
@@ -82,6 +82,10 @@
                               x:Uid="SelectOutputWithSelectionButton"
                               Click="_SelectOutputHandler"
                               Icon="AlignLeft" />
+                <AppBarButton x:Name="SearchCommandSelectionButton"
+                              x:Uid="SearchCommandSelectionButton"
+                              Click="_SearchCommandHandler"
+                              Icon="Find" />
             </mux:CommandBarFlyout.SecondaryCommands>
         </mux:CommandBarFlyout>
 
