--- a/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Profiles_Terminal.xaml
@@ -79,6 +79,16 @@
                 <TextBox Style="{StaticResource TextBoxSettingStyle}"
                          Text="{x:Bind Profile.AnswerbackMessage, Mode=TwoWay}" />
             </local:SettingContainer>
+
+            <!--  Allow Tmux Control  -->
+            <local:SettingContainer x:Uid="Profile_AllowTmuxControl"
+                                    Visibility="{x:Bind Profile.TmuxControlEnabled}"
+                                    ClearSettingValue="{x:Bind Profile.ClearAllowTmuxControl}"
+                                    HasSettingValue="{x:Bind Profile.HasAllowTmuxControl, Mode=OneWay}"
+                                    SettingOverrideSource="{x:Bind Profile.AllowTmuxControlOverrideSource, Mode=OneWay}">
+                <ToggleSwitch IsOn="{x:Bind Profile.AllowTmuxControl, Mode=TwoWay}"
+                              Style="{StaticResource ToggleSwitchInExpanderStyle}" />
+            </local:SettingContainer>
         </StackPanel>
     </Grid>
 </Page>
