Settings Back Button For Nested Pages
When navigating to a nested page e.g. Advanced Options, the Back Button appears for the navigation list now, this follows windows UI, see Windows Settings for a example

--- a/src/cascadia/TerminalSettingsEditor/MainPage.xaml
+++ b/src/cascadia/TerminalSettingsEditor/MainPage.xaml
@@ -66,7 +66,8 @@
 
     <muxc:NavigationView x:Name="SettingsNav"
                          Background="{ThemeResource SettingsPageBackground}"
-                         IsBackButtonVisible="Collapsed"
+                         BackRequested="BackButton_Click"
+                         IsBackButtonVisible="Visible"
                          IsSettingsVisible="False"
                          ItemInvoked="SettingsNav_ItemInvoked"
                          Loaded="SettingsNav_Loaded"
